--- a/tienda/templates/busqueda_amigos.html
+++ b/tienda/templates/busqueda_amigos.html
@@ -2,11 +2,11 @@
 
 {% load static %}
 
-{% block encabezado %} inicio {% endblock %}
+{% block encabezado %} Resultados de busqueda {% endblock %}
 
-{% block titulo %} Bienvenidos a mi tienda {% endblock %}
+{% block titulo %} Resultados de busqueda {% endblock %}
 
-{% block subtitulo %} Resultados de la busqueda {% endblock %}
+{% block subtitulo %} Resultados de la busqueda de amigos {% endblock %}
 
 {% block contenido %}
 
