--- a/tienda/templates/inicio.html
+++ b/tienda/templates/inicio.html
@@ -6,7 +6,7 @@
 
 {% block titulo %} Bienvenidos a mi tienda {% endblock %}
 
-{% block subtitulo %} Desde aca vas a poder buscar juegos en la biblioteca {% endblock %}
+{% block subtitulo %} Desde aca vas a poder buscar amigos por su usuario {% endblock %}
 
 {% block contenido %}
                 
