--- a/tienda/templates/tienda/biblioteca_confirm_delete.html
+++ b/tienda/templates/tienda/biblioteca_confirm_delete.html
@@ -9,16 +9,10 @@
 {% block subtitulo %} agregar productos a la biblioteca {% endblock %}
 
 {% block contenido %}
-                
-<form action="{% url 'aniadir_biblioteca' %}" method="POST"> {% csrf_token %}
 
-    <table>
-    {{ formulario.as_table }}
-    </table>
-    <br>
-    <input type="submit" value="Agregar a la biblioteca">
-
+<form method="POST">{% csrf_token %}
+    queres borrar "{{ object }}"??
+    <input type="submit" value="SI">
 </form>
-<h3>{{ mensaje }}</h3>
 
 {% endblock %}
