--- a/tienda/templates/index.html
+++ b/tienda/templates/index.html
@@ -33,6 +33,7 @@
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="{% url 'aniadir_biblioteca' %}">Biblioteca</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="{% url 'aniadir_carrito' %}">Carrito</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="{% url 'aniadir_amigos' %}">Amigos</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="{% url 'listar_biblioteca' %}">Biblioteca 2</a></li>
                     </ul>
                 </div>
             </div>
