--- a/tienda/templates/editar_usuario.html
+++ b/tienda/templates/editar_usuario.html
@@ -20,7 +20,6 @@
     </table>
     <input type="submit" value="Guardar">
 </form>
-
-
+<a class ="btn btn-primary" href="{% url 'agregar_avatar' %}">Mostrar</a>
 
 {% endblock %}
